--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
-  "name": "surplusfood-app",
+  "name": "surplusfoodapp",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "apk": "eas build -p android --profile preview"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.5.7",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/native-stack": "^6.9.12",
-    "@types/react": "~18.0.27",
-    "expo": "~48.0.10",
-    "expo-font": "^11.1.1",
-    "expo-splash-screen": "~0.18.1",
+    "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6",
-    "react-native-modal": "^13.0.1",
-    "react-native-paper": "^5.6.0",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-screens": "~3.20.0",
-    "typescript": "^4.9.4"
+    "react-native": "0.71.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
