--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react": "~18.0.27",
+    "axios": "^1.4.0",
     "expo": "~48.0.10",
     "expo-font": "^11.1.1",
-    "expo-splash-screen": "~0.18.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.7",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.6.0",
     "react-native-safe-area-context": "^4.5.0",
