--- a/eas.json
+++ b/eas.json
@@ -7,20 +7,16 @@
       "developmentClient": true,
       "distribution": "internal",
       "ios": {
-        "resourceClass": "m-medium"
+        "simulator": true
       }
     },
     "preview": {
       "distribution": "internal",
-      "ios": {
-        "resourceClass": "m-medium"
+      "android": {
+        "buildType": "apk"
       }
     },
-    "production": {
-      "android": {
-         "buildType": "apk"
-      }
-  }
+    "production": {}
   },
   "submit": {
     "production": {}
