--- a/package.json
+++ b/package.json
@@ -10,20 +10,22 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^18.1.0",
+    "@react-native-firebase/auth": "^18.3.0",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
+    "expo-dev-client": "~2.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-redux": "^8.0.5",
-    "expo-dev-client": "~2.2.1"
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
