--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "surplusfood9ja",
+    "name": "Surplus food9ja",
     "slug": "surplusfood9ja",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -30,6 +30,7 @@
     },
     "plugins": [
       "@react-native-firebase/app",
+      "@react-native-firebase/auth",
       "@react-native-google-signin/google-signin"
     ],
     "web": {
