--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "dev": "expo start --dev-client"
   },
   "dependencies": {
     "@react-native-firebase/app": "^18.1.0",
@@ -25,6 +26,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-size-matters": "^0.4.0",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
