--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
+    "apk": "eas build -p android --profile preview",
     "dev": "expo start --dev-client"
   },
   "dependencies": {
