--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "apk": "eas build -p android --profile preview",
-    "dev": "expo start --dev-client"
+    "dev": "expo start --dev-client",
+    "build": "eas build --profile development --platform android"
   },
   "dependencies": {
     "@react-native-firebase/app": "^18.1.0",
@@ -28,7 +29,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-size-matters": "^0.4.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
