--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "eas build --profile development --platform android"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-firebase/app": "^18.1.0",
     "@react-native-firebase/auth": "^18.3.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
@@ -29,8 +30,11 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-size-matters": "^0.4.0",
-    "react-redux": "^8.0.5",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
